--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,2 +1,2 @@
 [webservers]
-172.31.3.52 ansible_user=ec2-user ansible_ssh_private_key_file=~/work-with-ansible/aws-login.ppk
+172.31.3.52 ansible_user=ec2-user
